<resources>
    <string name="app_name">My Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_change_language">Change Language</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="description_title">Description</string>
    <string name="actionbar_movie">Movie</string>
    <string name="actionbar_tv_show">TV Show</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="fam_fav_list">Favorite List</string>
    <string name="fav_show">Favorite Show</string>
    <string name="succes_add_fav">Added to Favorite</string>
    <string name="failed_add_fav">Added to Favorite Failed</string>
    <string name="fav_movie_title">Favorite Movie List</string>
    <string name="fav_shows_title">Favorite Shows List</string>
    <string name="mov_detail">Movie Detail</string>
    <string name="fav_mov_detail">Favorite Movie Detail</string>
    <string name="shows_detail">TV Show Detail</string>
    <string name="fav_shows_detail">Favorite Show Detail</string>
    <string name="success_remove">Success remove favorite</string>
    <string name="failed_remove">Failed to remove favorite</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="dialod_remove_mov">Remove Favorite Movie</string>
    <string name="dialog_remove_shows">Remove Favorite TV Shows</string>
    <string name="remove_message">Are you sure want to remove this from your favorite ?</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type title</string>
    <string name="search_result_movie">Movie Search Result</string>
    <string name="search_result_show">Tv Show Search Result</string>
    <string name="appwidget_text">Favorite Movies</string>
    <string name="empty_text">No Favorite</string>
    <string name="banner_image">Banner Image</string>
    <string name="daily_setting">Enable Daily Notification</string>
    <string name="disable_daily">Disable Daily Notification</string>
    <string name="daily_notif">Don\'t forget to check movie today</string>
    <string name="release_setting">Enable Release Date Movie Notification</string>
    <string name="disable_release">Disable Release Date Movie Notification</string>
    <string name="release_msg">released today, with rating</string>
    <string name="title_change_settings">Settings</string>
    <string name="release_notification">Release Today Notification</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="notif_release">New Movie Released</string>
</resources>
