<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".activity.SettingsActivity"
    android:orientation="vertical">

        <TextView
            android:id="@+id/action_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="15sp"
            android:textColor="#000"
            android:text="@string/title_change_language"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <Switch
            android:id="@+id/sw_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/release_notification"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

        <Switch
            android:id="@+id/sw_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/daily_notification"/>

</LinearLayout>